--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creativeduoshop",
+  "name": "sweetsbykarla",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
   "main": "server.js",
@@ -10,12 +10,12 @@
     "client": "npm start --prefix frontend",
     "tailwindwatch": "npx tailwindcss -i /frontend/src/tailwind.css -c /frontend/tailwind.config.js -o site/style.css --watch --no-map",
     "buildtailwind": "npx tailwindcss -i /frontend/src/tailwind.css -c /frontend/tailwind.config.js -o site/style.css --minify --no-map",
-    "dev": "concurrently \"npm run client\" \"npm run server\" tailwindwatch",
+    "dev": "concurrently  \"npm run client\" \"npm run server\" tailwindwatch",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
-  "author": "Brad Traversy",
+  "author": "Karla",
   "license": "MIT",
   "dependencies": {
     "@auth0/auth0-react": "^2.0.0",
@@ -32,11 +32,12 @@
     "axios": "^1.2.2",
     "babel-polyfill": "^6.26.0",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.6.0",
     "cloudinary": "^1.30.0",
+    "clsx": "^1.2.1",
     "colors": "^1.4.0",
     "cookie-session": "^2.0.0",
     "cookies": "^0.8.0",
-    "daisyui": "^2.50.1",
     "dotenv": "^8.2.0",
     "easypost": "^0.1.1",
     "easyship": "^1.0.0",
@@ -49,6 +50,7 @@
     "img-comparison-slider": "^8.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "lucide-react": "^0.233.0",
     "mailgun": "^0.5.0",
     "mailgun-js": "^0.22.0",
     "moment": "^2.29.4",
@@ -66,20 +68,26 @@
     "react-compare-slider": "^2.2.0",
     "react-flickity-component": "^3.6.2",
     "react-popper": "^2.3.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
     "react-stripe-checkout": "^2.6.3",
     "react-toastify": "^9.0.8",
     "react-youtube": "^10.1.0",
     "reactstrap": "^9.1.5",
+    "shadcn-ui": "^0.1.3",
     "shippo": "^1.7.1",
     "ssl-express-www": "^3.0.8",
     "stripe": "^9.14.0",
     "swiper": "^8.4.5",
-    "webpack": "^5.74.0"
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
+    "webpack": "^5.74.0",
+    "webpack-dev-middleware": "^6.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "concurrently": "^5.3.0",
+    "daisyui": "^3.0.0",
     "nodemon": "^2.0.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
