--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "concurrently  \"npm run client\" \"npm run server\" tailwindwatch",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "prod-build": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Karla",
   "license": "MIT",
@@ -25,6 +25,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@headlessui/react": "^1.7.10",
     "@heroicons/react": "^1.0.6",
+    "@lottiefiles/jlottie": "^1.2.1",
+    "@lottiefiles/lottie-js": "^0.4.1",
     "@popperjs/core": "^2.11.6",
     "@reach/portal": "^0.17.0",
     "@stripe/react-stripe-js": "^1.16.1",
@@ -50,6 +52,7 @@
     "img-comparison-slider": "^8.0.0",
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
+    "lottie-react": "^2.4.0",
     "lucide-react": "^0.233.0",
     "mailgun": "^0.5.0",
     "mailgun-js": "^0.22.0",
