--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "cookies": "^0.8.0",
     "easypost": "^0.1.1",
     "easyship": "^1.0.0",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
     "install": "^0.13.0",
     "jodit-react": "^1.3.11",
