--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "concurrently  \"npm run client\" \"npm run server\" tailwindwatch",
     "data:import": "node backend/seeder",
     "data:destroy": "node backend/seeder -d",
-    "prod-build": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+    "prod-build": "NPM_CONFIG_PRODUCTION=false npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Karla",
   "license": "MIT",
