--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,11 +28,13 @@
     "mailgun-js": "^0.22.0",
     "moment": "^2.29.4",
     "npm": "^9.2.0",
+    "ol": "^4.6.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-flickity-component": "^3.6.2",
     "react-helmet": "^6.1.0",
+    "react-openlayers": "^0.3.0",
     "react-paypal-button-v2": "^2.6.2",
     "react-redux": "^7.2.8",
     "react-router-bootstrap": "^0.25.0",
