--- a/package.json
+++ b/package.json
@@ -56,20 +56,26 @@
     "lucide-react": "^0.233.0",
     "mailgun": "^0.5.0",
     "mailgun-js": "^0.22.0",
+    "mapbox-gl": "^2.15.0",
     "moment": "^2.29.4",
     "mongoose": "^6.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "npm": "^9.2.0",
+    "ol": "^4.6.5",
     "os-browserify": "^0.3.0",
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
+    "pigeon-maps": "^0.21.3",
     "preline": "^1.2.0",
     "react-app-rewired": "^2.2.1",
     "react-before-after-slider-component": "^1.1.6",
     "react-compare-slider": "^2.2.0",
     "react-flickity-component": "^3.6.2",
+    "react-leaflet": "^3.2.5",
+    "react-map-gl": "^7.0.25",
+    "react-openlayers": "^0.3.0",
     "react-popper": "^2.3.0",
     "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
@@ -90,7 +96,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.4",
     "concurrently": "^5.3.0",
-    "daisyui": "^3.0.0",
+    "daisyui": "^3.0.3",
     "nodemon": "^2.0.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
