--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@lottiefiles/jlottie": "^1.2.1",
     "@lottiefiles/lottie-js": "^0.4.1",
     "@popperjs/core": "^2.11.6",
+    "@railway/cli": "^3.3.1",
     "@reach/portal": "^0.17.0",
     "@stripe/react-stripe-js": "^1.16.1",
     "@stripe/stripe-js": "^1.46.0",
