--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
     "webpack": "^5.72.0"
   },
   "scripts": {
-    "dev": "PORT=4706 && react-scripts start",
+    "startdev": "PORT=4706 && react-scripts start",
     "start": "serve build -s -n -L -p $PORT",
     "switch-port": "PORT=4706",
     "build": "react-scripts build",
