--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,7 +51,7 @@
     "webpack": "^5.72.0"
   },
   "scripts": {
-    "dev": "react-scripts start",
+    "dev": "PORT=2200 react-scripts start",
     "start": "serve build -s -n -L -p $PORT",
     "build": "react-scripts build",
     "test": "react-scripts test",
