--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "easyship": "^1.0.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "flowbite": "^1.6.6",
     "install": "^0.13.0",
     "jodit-react": "^1.3.11",
     "jsonwebtoken": "^8.5.1",
@@ -74,7 +75,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.4",
-    "daisyui": "^3.0.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24"
   }
